[gd_scene load_steps=5 format=3 uid="uid://b48kkpmeflpcv"]

[ext_resource type="Script" uid="uid://djtyb284twlq0" path="res://src/ui/dialog/dialog_menu.gd" id="1_0af7o"]
[ext_resource type="Resource" uid="uid://dmafq6ugp7ebi" path="res://src/ui/dialog/test/test_dialog.tres" id="2_50uyl"]
[ext_resource type="Texture2D" uid="uid://d0n62d264ha7a" path="res://assets/duckclaw.png" id="3_8tp6h"]
[ext_resource type="Texture2D" uid="uid://bdqc1yc4gxwtw" path="res://icon.png" id="4_cu4em"]

[node name="DialogMenu" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0af7o")
dialog = ExtResource("2_50uyl")

[node name="DialogPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(0, 240)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="DialogPanel"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 40

[node name="VBoxContainer" type="VBoxContainer" parent="DialogPanel/MarginContainer"]
layout_mode = 2

[node name="SpeakerNameLabel" type="Label" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Speaker"
vertical_alignment = 1

[node name="DialogText" type="RichTextLabel" parent="DialogPanel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Hello World!"

[node name="PlayerIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 580.0
offset_right = 140.0
offset_bottom = 680.0
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_8tp6h")

[node name="SpeakerIcon" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.49411765)
layout_mode = 0
offset_left = 1480.0
offset_top = 580.0
offset_right = 1544.0
offset_bottom = 644.0
texture = ExtResource("4_cu4em")

[node name="DialogChoices" type="VBoxContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 168.0
offset_top = 446.0
offset_right = 408.0
offset_bottom = 778.0

[node name="DialogChoiceButton1" type="Button" parent="DialogChoices"]
visible = false
custom_minimum_size = Vector2(240, 80)
layout_mode = 2
text = "Yes. I absolutely agree with you"
autowrap_mode = 2

[node name="DialogChoiceButton2" type="Button" parent="DialogChoices"]
visible = false
custom_minimum_size = Vector2(240, 80)
layout_mode = 2
text = "No. I absolutely disagree with you"
autowrap_mode = 2

[node name="DialogChoiceButton3" type="Button" parent="DialogChoices"]
visible = false
custom_minimum_size = Vector2(240, 80)
layout_mode = 2
text = "No. I absolutely disagree with you"
autowrap_mode = 2

[node name="DialogChoiceButton4" type="Button" parent="DialogChoices"]
visible = false
custom_minimum_size = Vector2(240, 80)
layout_mode = 2
text = "No. I absolutely disagree with you"
autowrap_mode = 2

[connection signal="pressed" from="DialogChoices/DialogChoiceButton1" to="." method="_on_dialog_choice_1"]
[connection signal="pressed" from="DialogChoices/DialogChoiceButton2" to="." method="_on_dialog_choice_2"]
[connection signal="pressed" from="DialogChoices/DialogChoiceButton3" to="." method="_on_dialog_choice_3"]
[connection signal="pressed" from="DialogChoices/DialogChoiceButton4" to="." method="_on_dialog_choice_4"]
